Fix z-index for info request sent confirmation box

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -801,6 +801,7 @@ and (max-width: 1000px) {
   height: 41px;
   position: absolute;
   width: 372px;
+  z-index: 10;
 }
 
 .application-handling__resend-modify-link-confirmation-indicator {
